--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: June Lee, CS Undergraduate at Boston University
 ---
 <div class="blurb">
-	<h1>Hello!</h1>
+	<h1>Hello! My name is June Lee</h1>
 	<p>This will be where I post things related to my CS courses</p>
 </div><!-- /.blurb -->
