--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: June Lee, CS Undergraduate at Boston University
 ---
 <div class="blurb">
 	<h1>Hello! My name is June Lee</h1>
-	<p>This will be where I post things related to my CS courses</p>
+	<p>This will be where I post things related to my CS courses. You can find them in the Blog tab.</p>
 </div><!-- /.blurb -->
